// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioField /> renders properly 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 350px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1.5rem;
}

.c3 {
  box-sizing: border-box;
  color: #101112;
  width: s;
  height: s;
}

.c5 {
  box-sizing: border-box;
  grid-template-columns: 1fr;
  grid-row-gap: 0.25rem;
  display: grid;
  margin-top: 0.5rem;
}

.c6 {
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  color: #101112;
  width: m;
  height: m;
  margin-left: 0.75rem;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 600;
}

.c10 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-style: none;
  font-size: 0.875rem;
  line-height: 1rem;
}

.c8 {
  -webkit-appearance: none;
  outline: none;
  height: 18px;
  width: 18px;
  border-radius: 100%;
  border: 2px solid #7F8387;
}

.c8,
.c8[type="radio"] {
  box-sizing: border-box;
}

.c8:hover {
  border-color: #46494D;
}

.c8:focus {
  outline: 2px solid #5B91F4;
}

.c8:checked {
  border-color: #276EF1;
  background: radial-gradient(#276EF1 50%,rgba(255,0,0,0) 51%);
}

.c8:hover:checked {
  border-color: #1E54B7;
  background: radial-gradient(#1E54B7 50%,rgba(255,0,0,0) 51%);
}

.c8:disabled {
  border-color: #BABEC3;
}

.c8:checked:disabled {
  background: radial-gradient(#BABEC3 50%,rgba(255,0,0,0) 51%);
}

<form
    autocomplete="off"
    class="c0"
    data-testid="test-form"
    id="test-form"
  >
    <fieldset
      aria-invalid="false"
      class="c1 c2"
      data-testid="radio-test"
      display="flex"
      id="my-radio-field"
      width="input"
    >
      <label
        class="c3 c4"
        color="text.primary"
        font-weight="600"
      >
        This is my radio field
      </label>
      <div
        class="c5"
        display="grid"
      >
        <div
          class="c6 c7"
          display="flex"
        >
          <input
            class="c8"
            data-testid="radio-my-radio-field-a"
            id="my-radio-field-a"
            name="myRadioField"
            type="radio"
            value="a"
          />
          <label
            class="c9 c10"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-a"
          >
            Value A
          </label>
        </div>
        <div
          class="c6 c7"
          display="flex"
        >
          <input
            class="c8"
            data-testid="radio-my-radio-field-b"
            id="my-radio-field-b"
            name="myRadioField"
            type="radio"
            value="b"
          />
          <label
            class="c9 c10"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-b"
          >
            Value B
          </label>
        </div>
      </div>
    </fieldset>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<RadioField /> with error renders properly 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 350px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1.5rem;
}

.c3 {
  box-sizing: border-box;
  color: #101112;
  width: s;
  height: s;
}

.c5 {
  box-sizing: border-box;
  grid-template-columns: 1fr;
  grid-row-gap: 0.25rem;
  display: grid;
  margin-top: 0.5rem;
}

.c6 {
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  color: #101112;
  width: m;
  height: m;
  margin-left: 0.75rem;
}

.c11 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #F5DDDA;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-top: 0.75rem;
}

.c12 {
  box-sizing: border-box;
  color: #C73624;
  width: m;
  height: m;
}

.c14 {
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 600;
}

.c10 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-style: none;
  font-size: 0.875rem;
  line-height: 1rem;
}

.c13 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1rem;
}

.c15 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c8 {
  -webkit-appearance: none;
  outline: none;
  height: 18px;
  width: 18px;
  border-radius: 100%;
  border: 2px solid #7F8387;
}

.c8,
.c8[type="radio"] {
  box-sizing: border-box;
}

.c8:hover {
  border-color: #46494D;
}

.c8:focus {
  outline: 2px solid #5B91F4;
}

.c8:checked {
  border-color: #276EF1;
  background: radial-gradient(#276EF1 50%,rgba(255,0,0,0) 51%);
}

.c8:hover:checked {
  border-color: #1E54B7;
  background: radial-gradient(#1E54B7 50%,rgba(255,0,0,0) 51%);
}

.c8:disabled {
  border-color: #BABEC3;
}

.c8:checked:disabled {
  background: radial-gradient(#BABEC3 50%,rgba(255,0,0,0) 51%);
}

<form
    autocomplete="off"
    class="c0"
    data-testid="test-form"
    id="test-form"
  >
    <fieldset
      aria-describedby="error-my-radio-field"
      aria-errormessage="error-my-radio-field"
      aria-invalid="true"
      class="c1 c2"
      data-testid="radio-test"
      display="flex"
      id="my-radio-field"
      width="input"
    >
      <label
        class="c3 c4"
        color="text.primary"
        font-weight="600"
      >
        This is my radio field
      </label>
      <div
        class="c5"
        display="grid"
      >
        <div
          class="c6 c7"
          display="flex"
        >
          <input
            class="c8"
            data-testid="radio-my-radio-field-a"
            id="my-radio-field-a"
            name="myRadioField"
            type="radio"
            value="a"
          />
          <label
            class="c9 c10"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-a"
          >
            Value A
          </label>
        </div>
        <div
          class="c6 c7"
          display="flex"
        >
          <input
            class="c8"
            data-testid="radio-my-radio-field-b"
            id="my-radio-field-b"
            name="myRadioField"
            type="radio"
            value="b"
          />
          <label
            class="c9 c10"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-b"
          >
            Value B
          </label>
        </div>
      </div>
      <div
        class="c11"
        data-testid="error-my-radio-field"
        id="error-my-radio-field"
        role="alert"
      >
        <div
          class="c12 c13"
          color="text.critical"
          font-size="font-size-100"
          font-style="none"
          font-weight="400"
        >
          <p
            class="c14 c15"
            color="inherit"
          >
            errors.required
          </p>
        </div>
      </div>
    </fieldset>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
